--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -49,7 +49,7 @@
   {{#if interviews.length}}
     {{! column for the recent interview list }}
     <div class='feedback-list text-white font-mono text-3xl'>
-      <h3>Your Game Feedback:</h3>
+      <h3>Your Interview Feedback:</h3>
 
       {{#each interviews as |interview|}}
         {{! Row for the interview objects }}
